Delete get column's issues feature to reflect embedded design as per #43
Since we are now using am embedded design, we don't need to query for issues separately; they
are included as embedded documents when a project is queried for.

This also closes #36 (which is outdated at this point because of #43)
