# server/src/routers/api/columnRouter.ts
@@ -3,7 +3,6 @@ import {
     addIssue,
     deleteColumn,
     editColumn,
-    getColumnIssues,
 } from "../../controllers/columnController";
 
 const columnRouter = Router();
@@ -11,6 +10,5 @@ const columnRouter = Router();
 columnRouter.put("/edit/:id", editColumn);
 columnRouter.delete("/delete/:id", deleteColumn);
 columnRouter.post("/add-issue/:id", addIssue);
-columnRouter.get("/issues/:id", getColumnIssues);
 
 export { columnRouter };
